--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "node-compiler": "aeproject node && aeproject compiler",
-    "test": "aeproject test"
+    "test": "aeproject test",
+    "snippet": "node server/snippetLoader.js",
+    "domLoader": "node server/domLoader.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@aeternity/aepp-sdk": "^7.0.0-next.3",
-    "aeproject-lib": "^2.1.1"
+    "aeproject-lib": "^2.1.1",
+    "axios": "^0.19.2",
+    "puppeteer": "^2.1.0"
   }
 }
