--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aeternity/aepp-sdk": "^7.0.0-next.3",
+    "@aeternity/aepp-sdk": "^7.0.0",
     "aeproject-lib": "^2.1.1",
-    "puppeteer": "^2.1.0"
+    "puppeteer": "^2.1.0",
+    "qrcode-terminal": "^0.12.0",
+    "bignumber.js": "^9.0.0"
   }
 }
