updated oracle service for full system test

--- a/docker/nginx-default.conf
+++ b/docker/nginx-default.conf
@@ -23,4 +23,9 @@ server {
         proxy_pass_request_headers on;
         proxy_pass http://node1:3014;
     }
+
+    location /sample-site.txt {
+        add_header Content-Type text/plain;
+        return 200 "ak_fUq2NesPXcYZ1CcqBcGC3StpdnQw3iVxMA3YSeCNAwfN4myQk";
+    }
 }
