--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "dependencies": {
     "@aeternity/aepp-sdk": "^7.1.0",
     "aeproject-lib": "^2.1.1",
+    "bignumber.js": "^9.0.0",
     "puppeteer": "^2.1.0",
     "qrcode-terminal": "^0.12.0",
-    "bignumber.js": "^9.0.0"
+    "winston": "^3.2.1"
   }
 }
