--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aeternity/aepp-sdk": "^7.2.1",
     "aeproject-lib": "^2.2.0",
     "bignumber.js": "^9.0.0",
+    "esm": "^3.2.25",
     "puppeteer": "^3.0.2",
     "qrcode-terminal": "^0.12.0",
     "winston": "^3.2.1"
