chore: upgrade sdk, expose aci

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,9 +1,6 @@
 server {
     listen 3001;
-
-    location / {
-        proxy_pass http://node:3013;
-    }
+    access_log off;
 
     location /v2/debug {
         proxy_pass http://node:3113;
@@ -17,8 +14,24 @@ server {
         proxy_pass http://node:3014;
     }
 
+    location /v2 {
+        proxy_pass http://node:3013;
+    }
+
+    location /v3 {
+        proxy_pass http://node:3013;
+    }
+
+    location /api {
+        proxy_pass http://node:3013;
+    }
+
     location /sample-site.txt {
         add_header Content-Type text/plain;
         return 200 "ak_fUq2NesPXcYZ1CcqBcGC3StpdnQw3iVxMA3YSeCNAwfN4myQk";
+    }
+
+    location / {
+        proxy_pass http://node:3313;
     }
 }
