--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,12 +11,15 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@master
-      - name: Use Node.js 14.x
-        uses: actions/setup-node@v1
+        uses: actions/checkout@v4
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v4
         with:
-          node-version: 14.x
+          node-version: 20.x
       - run: npm install -g @aeternity/aeproject
       - run: npm install
       - run: aeproject env
-      - run: npm test
+      - run: aeproject test
+      - run: |
+          npm run generate-bytecode-aci-hashes
+          git diff --exit-code
