--- a/package.json
+++ b/package.json
@@ -4,24 +4,27 @@
   "description": "This is the default package.json generated for your project",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha ./test/**/*.js --timeout 0 --exit",
+    "test": "mocha ./test/**/*.js --timeout 0 --exit",
     "snippet": "node server/snippetLoader.js",
     "domLoader": "node server/domLoader.js",
-    "postinstall": "node .scripts/postinstall.js"
+    "postinstall": "node .scripts/postinstall.js",
+    "generate-bytecode-aci-hashes": "node .scripts/generate-bytecode-aci-hashes.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aeternity/aepp-sdk": "8.1.0",
-    "bignumber.js": "^9.0.1",
+    "@aeternity/aepp-sdk": "^13.3.2",
+    "bignumber.js": "^9.1.2",
     "esm": "^3.2.25",
-    "prompts": "^2.4.1",
-    "puppeteer": "^7.1.0",
+    "prompts": "^2.4.2",
+    "puppeteer": "^22.7.1",
     "qrcode-terminal": "^0.12.0",
-    "winston": "^3.3.3"
+    "winston": "^3.13.0"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^8.4.0"
+    "@aeternity/aeproject": "^4.10.0",
+    "chai": "^4.4.1",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^10.4.0"
   }
 }
